tests/NormalTests/paczka2/big_fuzzy/99963115.err
Error in line 1: A489 d282 88,2
Error in line 6: yu8zUcSw A172 50,0
Error in line 25: A489 A172 64,3
Error in line 31: tT2f2yw7McB A489 26,6
Error in line 33: AJckzL0 A85 1,1
Error in line 32: tT2f2yw7McB A85 52,2
Error in line 46: yu8zUcSw A85 68,8
Error in line 48: yu8zUcSw A489 89,8
Error in line 59: 3WxfC9f A489 192,9
Error in line 69: tT2f2yw7McB A85 71,8
Error in line 35: OIIDt A172 159,1
Error in line 68: AJckzL0 A172 55,6
Error in line 73: OIIDt A489 11,0
Error in line 74: AJckzL0 S282 29,4
Error in line 78: OIIDt A172 5,8
Error in line 88: tT2f2yw7McB S282 20,3
Error in line 91: 3WxfC9f S282 4,8
Error in line 95: 3WxfC9f A489 128,89
Error in line 90: AJckzL0 A172 48,3
Error in line 106: OIIDt A489 85,4
Error in line 115: yu8zUcSw A489 94,1
Error in line 116: OIIDt A172 32,1
Error in line 113: A489 A489 53,8
Error in line 118: yu8zUcSw S282 42,1
Error in line 120: tT2f2yw7McB A85 140,5
Error in line 130: 56pZeFuFwCA S282 41,1
Error in line 135: 56pZeFuFwCA A85 55,5
Error in line 127: tT2f2yw7McB A172 10,1
Error in line 131: 3WxfC9f A489 245,7
Error in line 144: AJckzL0 A172 24,8
Error in line 133: A489 A489 38,8
Error in line 160: OIIDt A172 63,4
Error in line 156: yu8zUcSw S282 55,9
Error in line 166: OIIDt S282 39,9
Error in line 163: AJckzL0 S282 345,8
Error in line 183: 3WxfC9f A172 47,0
Error in line 185: 3WxfC9f A85 27,7
Error in line 200: A489 A172 -1,9
Error in line 209: 3WxfC9f A172 24,9
Error in line 233: tT2f2yw7McB A85 49,7
Error in line 239: 56pZeFuFwCA A85 70,4
Error in line 240: 56pZeFuFwCA A489 84,2
Error in line 225: 3WxfC9f A489 100,0
